<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/login_background"
            android:elevation="4dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/Theme.AppCompat.Light.NoActionBar">
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_launcher_foreground"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                tools:ignore="VectorDrawableCompat" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                >

                <TextView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/content"
                    android:fontFamily="@font/gillsans"
                    android:textSize="20sp"
                    />

                <EditText
                    android:id="@+id/contentedit"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"

                    android:ems="10"
                    android:inputType="text"
                    android:fontFamily="@font/gillsans"
                    android:textSize="15sp"
                     />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:fontFamily="@font/gillsans"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

        <EditText
            android:id="@+id/tagedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:fontFamily="@font/gillsans"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_public"
            android:fontFamily="@font/gillsans"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/createbt"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/square_blue_button"
            android:text="@string/create_post"
            android:fontFamily="@font/gillsansb"
            android:textSize="15sp"
            android:textColor="#FFF"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            />


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_newpost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu"
        >

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>